tests/baselines/reference/usedBeforeAssignedTypeAssertion.errors.txt
usedBeforeAssignedTypeAssertion.ts(28,12): error TS2454: Variable 'uninitialized' is used before being assigned.


==== usedBeforeAssignedTypeAssertion.ts (1 errors) ====
    // Test case for type assertion (angle bracket syntax) - assignment should not error
    function testTypeAssertion() {
        let x: number;
        (<any>x) = 42; // Should not error - this is an assignment
    }
    
    // Test case for 'as' expression - assignment should not error 
    function testAsExpression() {
        let y: number;
        (y as any) = 42; // Should not error - this is an assignment
    }
    
    // Test case for parenthesized expression (should already work)
    function testParentheses() {
        let z: number;
        (z) = 42; // Should not error - this is an assignment
    }
    
    // Test case with nested type assertions
    function testNested() {
        let nested: any;
        ((nested as any) as unknown) = "test"; // Should not error
    }
    
    // Test cases that should still produce errors for proper context
    function shouldStillError() {
        let uninitialized: number;
        return uninitialized; // Should error - never assigned
               ~~~~~~~~~~~~~
!!! error TS2454: Variable 'uninitialized' is used before being assigned.
    }